feat: 멤버 활동 기록 개편
- 본문 조회, 댓글 조회 시 MemberActivity 이벤트 발송 기능 추가
- kafka 모듈화 이후 불필요해진 Event 발송코드 제거